ASSERT when firing low memory warning https://bugs.webkit.org/show_bug.cgi?id=131659

Reviewed by Mark Hahnenberg.

* heap/Heap.cpp:
(JSC::Heap::deleteAllCompiledCode): Allow deleteAllCompiledCode to be
called when no GC is happening because that is what we do when a low
memory warning fires, and it is harmless.


Canonical link: https://commits.webkit.org/149734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167293 268f45cc-cd09-0410-ab3c-d52691b4dbfc